--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "dev:clean": "powershell Remove-Item -Recurse -Force .next; pnpm run dev",
     "start": "next start"
   },
   "dependencies": {
